# CRMod

./: .gitignore  Cargo.toml  README.md  doc.txt
.github/workflows/: rust.yml
src/: cpp.rs  lib.rs
src/custom/: mod.rs
src/mario/: acmd.rs  frame.rs  mod.rs  status.rs
src/mario/acmd/: aerials.rs
src/mario/fireball/acmd/: specials.rs
src/mario/mariomovesetedit/: mod.rs
src/mario/mariomovesetedit/acmd/: specials.rs
src/mario/status/: special_n.rs
src/sukuna/: acmd.rs  frame.rs  mod.rs
src/sukuna/acmd/: aerials.rs  grabs.rs  lights.rs  specials.rs
